# AOOP-Catcher

./: CMakeLists.txt  README.md  body.cpp  body.h  main.cpp
OOCatcher/src/: base_line.h  body.cpp  body.h  line1.cpp  line1.h  line2.cpp  line2.h  main.cpp  object.cpp  object.h  point.cpp  point.h
